src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Salesforce Request Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Backlog</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Due Diligence</fullName>
        </values>
        <values>
            <fullName>Merged</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Testing</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>User List Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Contact.Account.Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Priority__c</fullName>
        <formula>TEXT( Account.Priority__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivationDeactivation_Needs__c</fullName>
        <label>Activation/Deactivation Needs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Account Deactivation</fullName>
                </value>
                <value>
                    <fullName>Remove Lost Products</fullName>
                    <label>Remove Lost Product(s)</label>
                </value>
                <value>
                    <fullName>Full Account Activation</fullName>
                </value>
                <value>
                    <fullName>Add Upsold Products</fullName>
                    <label>Add Upsold Product(s)</label>
                </value>
                <value>
                    <fullName>Suspend</fullName>
                </value>
                <value>
                    <fullName>Full Trial Activation</fullName>
                </value>
                <value>
                    <fullName>Full Trial Deactivation</fullName>
                </value>
                <value>
                    <fullName>Full Trial Conversion</fullName>
                </value>
                <value>
                    <fullName>Limited Trial Activation</fullName>
                </value>
                <value>
                    <fullName>Limited Trial Deactivation</fullName>
                </value>
                <value>
                    <fullName>Limited Trial Conversion</fullName>
                </value>
                <value>
                    <fullName>Renew Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assisted_Case_Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assisted Case Owner 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>Green Street (NA)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Assisted Case Owner 1)</relationshipLabel>
        <relationshipName>AssistedCaseOwner1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assisted_Case_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assisted Case Owner 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>Green Street (NA)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Assisted Case Owner 2)</relationshipLabel>
        <relationshipName>AssistedCaseOwner2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assisted_Case_Owner_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assisted Case Owner 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>Green Street (NA)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Assisted Case Owner 3)</relationshipLabel>
        <relationshipName>AssistedCaseOwner3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assisted_Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for customer Success</description>
        <label>Assisted Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Days_Since_Modified__c</fullName>
        <description>This will count how many business days the case based on last modified date.</description>
        <formula>IF(NOT(ISBLANK(LastModifiedDate)), 
   FLOOR((TODAY() - DATEVALUE(LastModifiedDate)) * 5 / 7) -
   FLOOR(MOD(TODAY() - DATEVALUE(LastModifiedDate) - 1, 7) / 5) +
   IF(WEEKDAY(DATEVALUE(LastModifiedDate)) &lt;= WEEKDAY(TODAY()), 1, 0),
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days Since Modified</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <label>Business Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Error__c</fullName>
        <formula>IF(ISPICKVAL(Error_Reason__c, &quot;&quot;), False, True)</formula>
        <label>Case Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Case Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Ticker__c</fullName>
        <label>Company Ticker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Context_for_Request__c</fullName>
        <label>Context for Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Success_FAQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Success FAQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Account_ID__c</fullName>
        <label>Duplicate Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Account_Name__c</fullName>
        <label>Duplicate Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Merging Account)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Contact_ID__c</fullName>
        <label>Duplicate Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Contact_Name__c</fullName>
        <label>Duplicate Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Duplicate Contact)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <label>Error Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deactivated pre/post contract expiration date</fullName>
                </value>
                <value>
                    <fullName>Account Email Distro was not removed</fullName>
                </value>
                <value>
                    <fullName>Product removed in error</fullName>
                </value>
                <value>
                    <fullName>Activated post contract start date</fullName>
                </value>
                <value>
                    <fullName>Billing Schedule Error</fullName>
                </value>
                <value>
                    <fullName>Contract Start and End Date</fullName>
                </value>
                <value>
                    <fullName>Multi-Year Oppy not marked</fullName>
                </value>
                <value>
                    <fullName>Create Renewal Box checked on MY</fullName>
                </value>
                <value>
                    <fullName>Merged wrong Account</fullName>
                </value>
                <value>
                    <fullName>Contact Merge Error</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <description>Space where the user place the error they are getting</description>
        <label>Error?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalated_To__c</fullName>
        <label>Escalated To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Market Analytics</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Client Support Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Links_Screenshots_Attachments__c</fullName>
        <inlineHelpText>This is required for Bug/Issue Request Category</inlineHelpText>
        <label>Links / Screenshots / Attachments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location_of_Changes__c</fullName>
        <label>Location of Changes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer Sandbox</fullName>
                </value>
                <value>
                    <fullName>Partial Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Markets__c</fullName>
        <label>Markets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>D.C. Metro</fullName>
                </value>
                <value>
                    <fullName>Dallas / Fort Worth</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Detroit</fullName>
                </value>
                <value>
                    <fullName>Fort Lauderdale</fullName>
                </value>
                <value>
                    <fullName>Honolulu</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Indianapolis</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Long Island</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Louisville</fullName>
                </value>
                <value>
                    <fullName>Memphis</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>New Jersey (Central)</fullName>
                </value>
                <value>
                    <fullName>New Jersey (Northern)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minutes_Spent_Cases__c</fullName>
        <label>Minutes Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mirror_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mirror User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetSuite_Merged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Merged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <label>On Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Contract</fullName>
                </value>
                <value>
                    <fullName>Signature Missing on Contract</fullName>
                </value>
                <value>
                    <fullName>Amount Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Wrong Subsidiary on Opportunity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordType.Name</formula>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Error_Reason__c</fullName>
        <label>Other Error Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outline_Requirements_Business_Value__c</fullName>
        <label>Outline Requirements &amp; Business Value</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>In-house - Developer</fullName>
                </value>
                <value>
                    <fullName>Outsourced - Plative</fullName>
                </value>
                <value>
                    <fullName>Outsourced - Admin Assist</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green Street</fullName>
                </value>
                <value>
                    <fullName>Green Street News</fullName>
                </value>
                <value>
                    <fullName>IJGlobal</fullName>
                </value>
                <value>
                    <fullName>Locatus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Discussed__c</fullName>
        <label>Products Discussed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset-Backed Alert</fullName>
                </value>
                <value>
                    <fullName>Canada Research + REIT Data</fullName>
                </value>
                <value>
                    <fullName>Commercial Mortgage Alert</fullName>
                </value>
                <value>
                    <fullName>Data Delivery - API</fullName>
                </value>
                <value>
                    <fullName>Data Sale</fullName>
                </value>
                <value>
                    <fullName>Data Sale - UK Retail - All</fullName>
                </value>
                <value>
                    <fullName>Data Sale - UK Retail - Convenience</fullName>
                </value>
                <value>
                    <fullName>Data Sale - UK Retail - Independents</fullName>
                </value>
                <value>
                    <fullName>Data Sale - UK Retail - London</fullName>
                </value>
                <value>
                    <fullName>Data Sale - UK Retail - Multiples</fullName>
                </value>
                <value>
                    <fullName>EUR Detailed NAV</fullName>
                </value>
                <value>
                    <fullName>Green Street News: Canada</fullName>
                </value>
                <value>
                    <fullName>Pan-European Research + Market Data &amp; Deals</fullName>
                </value>
                <value>
                    <fullName>Pan-European Research + REIT Data</fullName>
                </value>
                <value>
                    <fullName>Real Estate Alert</fullName>
                </value>
                <value>
                    <fullName>US Detailed NAV</fullName>
                </value>
                <value>
                    <fullName>US Portfolio Tools</fullName>
                </value>
                <value>
                    <fullName>US Research + Market Data &amp; Deals</fullName>
                </value>
                <value>
                    <fullName>US Research + REIT Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <label>Reason for Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tech Issue</fullName>
                </value>
                <value>
                    <fullName>Favor Account</fullName>
                </value>
                <value>
                    <fullName>Non-payment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_ID__c</fullName>
        <label>Report ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <label>Request Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Process Improvement</fullName>
                    <default>true</default>
                    <label>Process Improvement</label>
                </value>
                <value>
                    <fullName>General Customization</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Bug / Broken Feature</fullName>
                </value>
                <value>
                    <fullName>Deal Scoring Feedback</fullName>
                </value>
                <value>
                    <fullName>Data Cleanup</fullName>
                </value>
                <value>
                    <fullName>Data Upload</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>New Employee - SFDC Seat Request</fullName>
                </value>
                <value>
                    <fullName>User Deactivation</fullName>
                </value>
                <value>
                    <fullName>Roadmap</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Bug/Issue</fullName>
                </value>
                <value>
                    <fullName>Chart/Training</fullName>
                </value>
                <value>
                    <fullName>Platform Feedback/Wishlist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <label>Request Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Requested_By_Role__c</fullName>
        <formula>Requested_By__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Related_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Status__c</fullName>
        <description>This field is used to trigger compliance records.</description>
        <inlineHelpText>If you added research products to the account, and there were none to begin with, please select &quot;1st Time Research Client&quot;. If you removed all research products from the account, please select &quot;Lost All Research Products&quot;. If neither of these occurred as products were added/removed, please select N/A.</inlineHelpText>
        <label>Research Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ActivationDeactivation_Needs__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Time Research Client</fullName>
                </value>
                <value>
                    <fullName>Lost All Research Products</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training Issue</fullName>
                </value>
                <value>
                    <fullName>Process Improvement</fullName>
                </value>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>System Bug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Priority__c</fullName>
        <label>SF Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sectors__c</fullName>
        <label>Sectors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment / Residential</fullName>
                </value>
                <value>
                    <fullName>Cold Storage</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Ground Lease</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Life Science</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Mall</fullName>
                </value>
                <value>
                    <fullName>Manufactured Home Park</fullName>
                </value>
                <value>
                    <fullName>Net Lease</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail (EU)</fullName>
                </value>
                <value>
                    <fullName>Self-Storage</fullName>
                </value>
                <value>
                    <fullName>Single-family Rental</fullName>
                </value>
                <value>
                    <fullName>Strip Center</fullName>
                </value>
                <value>
                    <fullName>Student Housing</fullName>
                </value>
                <value>
                    <fullName>Tower</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Notes__c</fullName>
        <label>Solution Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <label>Steps to Reproduce</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_Day__c</fullName>
        <formula>CASE(
MOD(DATEVALUE( CreatedDate )-DATE(1900,1,7),7),
0,&quot;Sunday&quot;,
1,&quot;Monday&quot;,
2,&quot;Tuesday&quot;,
3,&quot;Wednesday&quot;,
4,&quot;Thursday&quot;,
5,&quot;Friday&quot;,
6,&quot;Saturday&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted Day</label>
        <type>Text</type>
    </fields>
</CustomObject>